--- a/discord/static/style.css
+++ b/discord/static/style.css
@@ -1,11 +1,10 @@
-table {
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
+html {
+    background-image: url();
 }
 
-td {
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
+.container {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
 }
